# openstack-pbr

./: .gitignore  python-pbr.spec  setup.cfg  setup.py
debian/: .gitignore  changelog  control  python3-pbr.lintian-overrides  rules
debian/source/: lintian-overrides
