[metadata]
name = pbr
version = 5.8.0
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
summary = Python Build Reasonableness
description_file = 
	README.rst
description_content_type = text/x-rst; charset=UTF-8
home_page = https://docs.openstack.org/pbr/latest/
project_urls = 
	Bug Tracker = https://bugs.launchpad.net/pbr/
	Documentation = https://docs.openstack.org/pbr/
	Source Code = https://opendev.org/openstack/pbr
python_requires = >=2.6
classifier = 
	Development Status :: 5 - Production/Stable
	Environment :: Console
	Environment :: OpenStack
	Intended Audience :: Developers
	Intended Audience :: Information Technology
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7

[options]
packages = find:
include_package_data = True

[options.entry_points]
distutils.setup_keywords = 
	pbr = pbr.core:pbr
egg_info.writers = 
	pbr.json = pbr.pbr_json:write_pbr_json
console_scripts = 
	pbr = pbr.cmd.main:main

[bdist_wheel]
universal = 1

[egg_info]
tag_build = 
tag_date = 0

